# flux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DRIFT.md  README.md  SECURITY.md  Taskfile.yaml
.github/: PULL_REQUEST_TEMPLATE.md
assets/: README.md
bench/: replay-agent.sh  run-synthetic-loop.sh  run-tbench-loop.sh  watch-agent.sh
crates/flux-a2a/: Cargo.toml
crates/flux-a2a/src/: client.rs  lib.rs  server.rs  types.rs
crates/flux-agent/: Cargo.toml
crates/flux-agent/src/: lib.rs  role.rs
crates/flux-anthropic/: Cargo.toml
crates/flux-anthropic/src/: lib.rs  wire.rs
crates/flux-app/: Cargo.toml
crates/flux-app/examples/: hello.flux  support-bot.flux
crates/flux-app/src/: app.rs  bus.rs  channel.rs  lib.rs  ops.rs  secrets.rs
crates/flux-app/tests/: integration.rs
crates/flux-browser/: Cargo.toml
crates/flux-browser/src/: lib.rs
crates/flux-capabilities/: Cargo.toml
crates/flux-capabilities/src/: browser.rs  datasource.rs  lib.rs
crates/flux-capabilities/src/datasource/: embeddings.rs  host_caps.rs  ingest.rs  memory.rs  mod.rs  ops.rs  semantic.rs  sqlite.rs
crates/flux-capabilities/src/endpoint/: broker.rs  host_caps.rs  mod.rs  ops.rs
crates/flux-channels/: Cargo.toml  README.md
crates/flux-channels/src/: channel.rs  config.rs  deliver.rs  host.rs  lib.rs
crates/flux-channels/src/adapters/: a2a.rs  mod.rs  schedule.rs  slack.rs  webhook.rs
crates/flux-channels/tests/: e2e.rs  host.rs  routing.rs  schedule.rs  webhook.rs
crates/flux-cli/: Cargo.toml
crates/flux-cli/src/: main.rs  plugin_skill.rs  preset.rs  skill_cmd.rs  style.rs
crates/flux-cognition/: Cargo.toml
crates/flux-cognition/src/: lib.rs
crates/flux-config/: Cargo.toml
crates/flux-config/src/: lib.rs
crates/flux-context/: Cargo.toml
crates/flux-context/src/: lib.rs
crates/flux-core/: Cargo.toml
crates/flux-core/src/: audio.rs  content.rs  error.rs  event.rs  lib.rs  message.rs  pricing.rs  stream.rs
crates/flux-credentials/: Cargo.toml
crates/flux-credentials/src/: lib.rs
crates/flux-datasource/: Cargo.toml
crates/flux-datasource/src/: lib.rs
crates/flux-eval/: Cargo.toml
crates/flux-eval/agents/: planner.md  reviewer.md
crates/flux-eval/assets/: synthetic-suite.json
crates/flux-eval/src/: adapter.rs  aggregate.rs  gate.rs  git.rs  lib.rs  metrics.rs  ops.rs  painpoint.rs  report.rs  runner.rs  score.rs  spec.rs  transcript.rs  util.rs
crates/flux-eval/src/adapters/: local.rs  mod.rs  multi.rs  terminal_bench.rs
crates/flux-eval/terminal_bench/: flux_agent.py
crates/flux-eval/tests/: flows_validate.rs
crates/flux-events/: Cargo.toml
crates/flux-events/src/: context.rs  kind.rs  lib.rs  projection.rs  store.rs
crates/flux-flow/: Cargo.toml  DOCUMENTATION.md  build.rs
crates/flux-flow/assets/: agent-loop.flux
crates/flux-flow/docs/: ops-reference.md
crates/flux-flow/src/: agent_sink.rs  analyze.rs  ast.rs  compile.rs  composites.rs  engine.rs  error.rs  lib.rs  loop_host.rs  registry.rs  render.rs  runtime.rs  state.rs
crates/flux-flow/src/voice/: driver.rs  mod.rs  sink.rs  tests.rs
crates/flux-flow/tests/: skill_docs_in_sync.rs
crates/flux-hooks/: Cargo.toml
crates/flux-hooks/src/: lib.rs
crates/flux-integrations/: Cargo.toml
crates/flux-integrations/src/: lib.rs
crates/flux-lang/: AGENTS.md  Cargo.toml  README.md
crates/flux-lang/docs/: PRD.md  STATUS.md  design-review.md  evolution-impl-plan.md  reference.md  syntax.md
crates/flux-lang/examples/: call-routing.flux
crates/flux-lang/skill/: SKILL.md
crates/flux-lang/src/: analyze.rs  ast.rs  dsl.rs  effects.rs  format.rs  host.rs  lib.rs  opspec.rs  optimize.rs  parse.rs  prelude.rs  program.rs  render.rs  runtime.rs  schema.rs  sink.rs  skill.rs  store.rs
crates/flux-lang/tests/: skill_in_sync.rs  text_roundtrip.rs
crates/flux-markdown/: Cargo.toml
crates/flux-markdown/src/: frontmatter.rs  lib.rs  render.rs
crates/flux-messages/: Cargo.toml
crates/flux-messages/src/: lib.rs
crates/flux-ollama/: Cargo.toml
crates/flux-ollama/src/: lib.rs
crates/flux-openai/: Cargo.toml
crates/flux-openai/src/: lib.rs
crates/flux-orchestrate/: Cargo.toml
crates/flux-orchestrate/src/: lib.rs  role.rs
crates/flux-plugin/: Cargo.toml
crates/flux-plugin/src/: hooks.rs  lib.rs
crates/flux-plugin/tests/: host.rs
crates/flux-provider/: Cargo.toml
crates/flux-provider/src/: lib.rs  realtime.rs
crates/flux-providers/: Cargo.toml
crates/flux-providers/src/: anthropic.rs  bedrock.rs  codex.rs  lib.rs  ollama.rs  openai.rs  openrouter.rs
crates/flux-providers/src/messages/: mod.rs  quirks.rs  wire.rs
crates/flux-providers/src/realtime/: client.rs  config.rs  event.rs  mod.rs
docs/: README.md  a2a.md  agent-loop.md  architecture.md  dogfood-notes.md  improvements.md  language.md  model.md  roadmap.md  (+2 more)
plugins/: AUTHORING.md  Cargo.toml  README.md
plugins/alertmanager/: Cargo.toml
plugins/alertmanager/src/: main.rs
plugins/asterisk/: Cargo.toml
plugins/asterisk/src/: main.rs
plugins/aws/: Cargo.toml
plugins/aws/src/: main.rs
plugins/confluence/: Cargo.toml
plugins/confluence/src/: main.rs
plugins/docker/: Cargo.toml
plugins/docker/src/: main.rs
plugins/gitlab/: Cargo.toml
plugins/gitlab/src/: main.rs
plugins/grafana/: Cargo.toml
plugins/grafana/src/: main.rs
plugins/homer/: Cargo.toml
plugins/homer/src/: main.rs
plugins/host-kit/: Cargo.toml
plugins/host-kit/src/: lib.rs
plugins/host-kit/tests/: no_manual_plugin_schema.rs
plugins/huggingface/: Cargo.toml
plugins/huggingface/src/: main.rs
plugins/jira/: Cargo.toml
plugins/jira/src/: main.rs
plugins/kubernetes/: Cargo.toml
plugins/kubernetes/src/: main.rs
plugins/loki/: Cargo.toml
plugins/loki/src/: main.rs
plugins/opsgenie/: Cargo.toml
plugins/opsgenie/src/: main.rs
plugins/prometheus/: Cargo.toml
plugins/prometheus/src/: main.rs
plugins/slack/: Cargo.toml
plugins/slack/src/: main.rs
plugins/sql/: Cargo.toml
plugins/sql/src/: main.rs
plugins/websearch/: Cargo.toml
plugins/websearch/src/: main.rs
(+228 files in other folders)
