[workspace]
resolver = "2"
members = [
    "crates/flux-core",
    "crates/flux-policy",
    "crates/flux-secret",
    "crates/flux-spec",
    "crates/flux-config",
    "crates/flux-provider",
    "crates/flux-system",
    "crates/flux-runtime",
    "crates/flux-tools",
    "crates/flux-events",
    "crates/flux-skill",
    "crates/flux-agent",
    "crates/flux-orchestrate",
    "crates/flux-lang",
    "crates/flux-flow",
    "crates/flux-eval",
    "crates/flux-plugin",
    "crates/flux-providers",
    "crates/flux-credentials",
    "crates/flux-sdk",
    "crates/flux-auth",
    "crates/flux-evidence",
    "crates/flux-datasource",
    "crates/flux-a2a",
    "crates/flux-server",
    "crates/flux-capabilities",
    "crates/flux-tui",
    "crates/flux-cli",
    "crates/flux-codegate",
    "crates/flux-cognition",
    "crates/flux-app",
    "crates/flux-markdown",
    "crates/flux-channels",
]
# `plugins/` is its own nested cargo workspace (the integration plugin pack, D-08): subprocess binaries
# with heavy vendor deps (k8s client, cloud SDKs) kept OUT of the main flux gate. Built separately.
exclude = ["plugins"]

[workspace.package]
edition = "2021"
version = "0.2.5"
license = "MIT OR Apache-2.0"
repository = "https://github.com/codewandler/flux"
homepage = "https://github.com/codewandler/flux"
rust-version = "1.85"

[workspace.dependencies]
# internal
#
# Crates in the `flux-sdk` publish closure carry a `version` alongside `path`: cargo uses the path for
# local builds and the version in the *published* manifest, so `cargo publish` can resolve them from
# crates.io. Keep these versions in lockstep with `[workspace.package].version` on every release (see
# crates/flux-sdk/PUBLISHING.md). Crates NOT in the closure stay path-only — they are not published.
flux-core = { path = "crates/flux-core", version = "0.2.5" }
flux-policy = { path = "crates/flux-policy", version = "0.2.5" }
flux-secret = { path = "crates/flux-secret", version = "0.2.5" }
flux-spec = { path = "crates/flux-spec", version = "0.2.5" }
flux-config = { path = "crates/flux-config" }
flux-system = { path = "crates/flux-system", version = "0.2.5" }
flux-runtime = { path = "crates/flux-runtime", version = "0.2.5" }
flux-tools = { path = "crates/flux-tools", version = "0.2.5" }
flux-events = { path = "crates/flux-events", version = "0.2.5" }
flux-agent = { path = "crates/flux-agent", version = "0.2.5" }
flux-skill = { path = "crates/flux-skill", version = "0.2.5" }
flux-orchestrate = { path = "crates/flux-orchestrate" }
flux-lang = { path = "crates/flux-lang", version = "0.2.5" }
flux-flow = { path = "crates/flux-flow", version = "0.2.5" }
flux-eval = { path = "crates/flux-eval" }
flux-plugin = { path = "crates/flux-plugin" }
flux-auth = { path = "crates/flux-auth" }
flux-evidence = { path = "crates/flux-evidence", version = "0.2.5" }
flux-datasource = { path = "crates/flux-datasource", version = "0.2.5" }
flux-a2a = { path = "crates/flux-a2a" }
flux-server = { path = "crates/flux-server" }
flux-capabilities = { path = "crates/flux-capabilities" }
flux-sdk = { path = "crates/flux-sdk", version = "0.2.5" }
flux-tui = { path = "crates/flux-tui" }
flux-provider = { path = "crates/flux-provider", version = "0.2.5" }
flux-providers = { path = "crates/flux-providers" }
flux-credentials = { path = "crates/flux-credentials" }
flux-cognition = { path = "crates/flux-cognition", version = "0.2.5" }
flux-app = { path = "crates/flux-app" }
flux-markdown = { path = "crates/flux-markdown" }
flux-channels = { path = "crates/flux-channels" }

# external
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
schemars = "0.8"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ratatui = "0.29"
crossterm = "0.28"
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"
regex = "1"
similar = "2"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
rquickjs = "0.6"
axum = "0.7"
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Capped below 2.18: 2.18+ require `signal-hook-tokio ^0.4`, which does not exist on crates.io (max is
# 0.3.1), so their socket-mode (`hyper`) feature is unbuildable. 2.17 is the newest resolvable release.
slack-morphism = ">=2.10, <2.18"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
