[package]
name = "flux-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux agent loop: provider stream → tool dispatch through the safety envelope → tool results → repeat, persisted per session"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
flux-runtime.workspace = true
flux-events.workspace = true
flux-spec.workspace = true
flux-evidence.workspace = true
flux-skill.workspace = true
futures.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio.workspace = true
flux-system.workspace = true
flux-tools.workspace = true
