[package]
name = "flux-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux Agent pillar: agent definitions (AgentSpec, markdown Roles) assembled onto the flux-flow engine"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
flux-runtime.workspace = true
flux-events.workspace = true
flux-evidence.workspace = true
flux-skill.workspace = true
flux-flow.workspace = true
flux-tools.workspace = true
flux-markdown.workspace = true
serde.workspace = true
serde_norway.workspace = true
