[package]
name = "flux-anthropic"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Native Anthropic Messages API client for flux (SSE streaming, tool use, extended thinking)"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio.workspace = true
