[package]
name = "flux-browser"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux web access: a guarded web_fetch tool (no loopback/private egress). CDP browser automation is the planned upgrade behind this surface."

[dependencies]
flux-core.workspace = true
flux-runtime.workspace = true
flux-spec.workspace = true
flux-system.workspace = true
reqwest.workspace = true
url.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
