[package]
name = "flux-capabilities"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux agent capabilities: a guarded web_fetch tool (browser) + a knowledge datasource (records, a pluggable backend, and retrieval ops)"

[dependencies]
flux-core.workspace = true
flux-datasource.workspace = true
flux-runtime.workspace = true
flux-spec.workspace = true
flux-system.workspace = true
reqwest.workspace = true
url.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
