[package]
name = "flux-capabilities"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux agent capabilities: a guarded web_fetch tool (browser) + a knowledge datasource (records, a pluggable backend, and retrieval ops)"

[dependencies]
flux-core.workspace = true
flux-datasource.workspace = true
flux-plugin.workspace = true
flux-runtime.workspace = true
flux-secret.workspace = true
flux-spec.workspace = true
flux-system.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
url.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
# Embeddings (optional): a runtime-free blocking HTTP client for the synchronous `Embedder` seam — NOT
# reqwest::blocking, which spins its own runtime and panics when called from within tokio.
ureq = { version = "2", optional = true, features = ["json"] }

[features]
# Wire the semantic/embeddings datasource backend (the `OpenAiEmbedder` over /v1/embeddings). Off by
# default — the keyword path and the whole default gate are unchanged.
embeddings = ["dep:ureq"]

[dev-dependencies]
tokio.workspace = true
