[package]
name = "flux-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "the flux binary — the LLM plans, the runtime runs: compile a request into a deterministic Flux-Lang plan and execute it through the safety envelope"

[[bin]]
name = "flux"
path = "src/main.rs"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
flux-providers.workspace = true
flux-credentials.workspace = true
flux-runtime.workspace = true
flux-spec.workspace = true
flux-config.workspace = true
flux-policy.workspace = true
flux-auth.workspace = true
flux-secret.workspace = true
flux-evidence.workspace = true
flux-system.workspace = true
flux-tools.workspace = true
flux-events.workspace = true
flux-context.workspace = true
flux-agent.workspace = true
flux-flow.workspace = true
flux-cognition.workspace = true
flux-app.workspace = true
flux-eval.workspace = true
flux-orchestrate.workspace = true
flux-a2a.workspace = true
flux-server.workspace = true
flux-tui.workspace = true
flux-capabilities.workspace = true
flux-plugin.workspace = true
flux-skill.workspace = true
flux-sdk.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
async-trait.workspace = true
crossterm.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
reedline = "0.48.0"
flux-markdown = { workspace = true, features = ["terminal"] }
