[package]
name = "flux-context"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux context projector: ordered providers (project files, environment) assembled into the system prompt"

[dependencies]
flux-core.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
