[package]
name = "flux-credentials"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux provider credentials: token store, CLI-credential import, OAuth refresh + PKCE login, TokenSource impl"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
