[package]
name = "flux-eval"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux eval & self-improvement harness: benchmark adapters, session mining, scoring, and the ops improve.flux orchestrates"

[dependencies]
flux-core.workspace = true
flux-spec.workspace = true
flux-runtime.workspace = true
flux-system.workspace = true
flux-session.workspace = true
flux-flow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
regex.workspace = true

[dev-dependencies]
# For the fixture test that validates examples/*.flux against the live op registry.
flux-tools.workspace = true
flux-orchestrate.workspace = true
