[package]
name = "flux-flow"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Flux-Lang: compile an instruction into a typed, deterministic execution graph — the LLM plans, the runtime runs"

[dependencies]
flux-lang.workspace = true
flux-core.workspace = true
flux-spec.workspace = true
flux-runtime.workspace = true
flux-provider.workspace = true
flux-events.workspace = true
flux-evidence.workspace = true
flux-skill.workspace = true
serde_json.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
sha2.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
flux-tools.workspace = true
flux-system.workspace = true
