[package]
name = "flux-integrations"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux inbound/outbound integrations: Slack event parsing + outbound notifications (webhook trigger lives in flux-server)"

[dependencies]
flux-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
