[package]
name = "flux-lang"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Flux-Lang: the pure language core — AST, renderer, analyzer, effect/op types, and the schema/skill single-source-of-truth. No runtime, provider, or concrete tools."

[dependencies]
flux-core.workspace = true
flux-spec.workspace = true
flux-policy.workspace = true
flux-evidence.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sha2.workspace = true
tokio.workspace = true
futures.workspace = true
# CLI-only; gated behind the `cli` feature so library consumers don't pull clap.
clap = { workspace = true, optional = true }

[features]
# Builds the `fluxlang` binary (skill/schema/render). Off by default for lib consumers.
cli = ["dep:clap"]

[[bin]]
name = "fluxlang"
path = "src/bin/fluxlang.rs"
required-features = ["cli"]
