[package]
name = "flux-messages"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Shared Anthropic Messages protocol core for flux providers (wire schema, body/stream helpers, per-provider/model quirks)"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio.workspace = true
