[package]
name = "flux-ollama"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Local Ollama provider for flux over the Anthropic Messages protocol (native tool calling)"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
flux-messages.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
