[package]
name = "flux-openai"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "OpenAI-family wire codecs for flux (Chat Completions now; Responses next) + openai/openrouter/codex credentials"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
bytes.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
