[package]
name = "flux-orchestrate"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux multi-agent orchestration: markdown agent roles, sub-agent spawner, plan-and-dispatch"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
flux-runtime.workspace = true
flux-spec.workspace = true
flux-policy.workspace = true
flux-events.workspace = true
flux-agent.workspace = true
flux-flow.workspace = true
flux-system.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio.workspace = true
