[package]
name = "flux-providers"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux's concrete LLM providers — the shared Anthropic Messages protocol core plus the Anthropic, OpenAI, OpenRouter, and Ollama wire codecs/credentials (built on the flux-provider abstraction)"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
bytes.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
