[package]
name = "flux-providers"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "flux's concrete LLM providers — the shared Anthropic Messages protocol core plus the Anthropic, OpenAI, OpenRouter, and Ollama wire codecs/credentials (built on the flux-provider abstraction)"

[dependencies]
flux-core.workspace = true
flux-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
bytes.workspace = true
reqwest.workspace = true

# Realtime (voice-to-voice) provider — WebSocket transport, off by default so the HTTP family stays lean.
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[features]
# The OpenAI Realtime (full-duplex, voice-to-voice) provider.
realtime = ["dep:tokio", "dep:tokio-util", "dep:tokio-tungstenite", "dep:base64"]

[dev-dependencies]
tokio.workspace = true
